src/test/ui/feature-gates/feature-gate-type_alias_impl_trait.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate-type_alias_impl_trait.rs:10:9
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL |     Bar(42)
   |         ^^ expected opaque type, found integer
   |
   = note: expected opaque type `impl Debug`
                     found type `{integer}`

error[E0658]: type alias impl trait is not permitted here
  --> $DIR/feature-gate-type_alias_impl_trait.rs:16:19
   |
LL |     let x = || -> Foo2 { 42 };
   |                   ^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0308]: mismatched types
  --> $DIR/feature-gate-type_alias_impl_trait.rs:23:18
   |
LL | type Foo3 = impl Debug;
   |             ---------- the found opaque type
...
LL |     let y: i32 = x;
   |            ---   ^ expected `i32`, found opaque type
   |            |
   |            expected due to this
   |
   = note:     expected type `i32`
           found opaque type `impl Debug`

error[E0308]: mismatched types
  --> $DIR/feature-gate-type_alias_impl_trait.rs:26:13
   |
LL | type Foo3 = impl Debug;
   |             ---------- the expected opaque type
...
LL |     define3(42)
   |             ^^ expected opaque type, found integer
   |
   = note: expected opaque type `impl Debug`
                     found type `{integer}`

error[E0658]: type alias impl trait is not permitted here
  --> $DIR/feature-gate-type_alias_impl_trait.rs:33:12
   |
LL |     let y: Foo4 = 42;
   |            ^^^^
   |
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error: could not find defining uses
  --> $DIR/feature-gate-type_alias_impl_trait.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/feature-gate-type_alias_impl_trait.rs:19:13
   |
LL | type Foo3 = impl Debug;
   |             ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/feature-gate-type_alias_impl_trait.rs:29:13
   |
LL | type Foo4 = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
